# reinze-lib-fun

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: beaver.rs  cameo.rs  chinchompa.rs  eightball.rs  flashbang.rs  golem.rs  heron.rs  horoscope.rs  joke.rs  liar.rs  lib.rs  noob.rs  toucan.rs
