[package]
name = "reinze-lib-fun"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { git = "https://github.com/ryanwohara/reinze-lib-common.git", branch = "main", package = "reinze-lib-common" }
rand = "0.9.2"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }

[lib]
crate-type = ["dylib"]
